created app state for realcost

--- a/states/agents/ntp/settings.jinja
+++ b/states/agents/ntp/settings.jinja
@@ -15,11 +15,10 @@
     }
 }, merge=salt['pillar.get']('ntp:lookup')) %}
 
-{% set servers = salt['pillar.get']('ntp:servers', 
-                                    ['0.north-america.pool.ntp.org', 
-                                     '1.north-america.pool.ntp.org',
-                                     '2.north-america.pool.ntp.org',
-                                     '3.north-america.pool.ntp.org'])
+{% set servers = salt['pillar.get'](
+    'ntp:servers', 
+    ['0.north-america.pool.ntp.org', '1.north-america.pool.ntp.org',
+     '2.north-america.pool.ntp.org', '3.north-america.pool.ntp.org'])
 %}
 
 {% do ntp.update({
